# ai-agent-project

./: .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  USAGE.md  agents_core.py  crewai_agents.py  crewai_agents_helpers.py  llm_adapters.py  personal_researcher.py  pyproject.toml  pytest.ini  requirements.txt  research_report.md  run_team.py  tavily_adapter.py  validate_tavily_key.py
.github/workflows/: ci.yml  docker_build.yml
scripts/: run_integration_tests.sh
tests/: test_agents.py  test_cache_metrics.py  test_memory_and_llm.py  test_personal_researcher.py  test_redis_integration.py  test_run_agent_flow.py  test_run_with_real_client.py  test_tavily_adapter.py  test_tavily_redis_cache.py  test_verification.py  test_verification_ner.py
tests/integration/: test_redis_integration_real.py  test_tavily_integration.py
