[project]
name = "ai-agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.7.2",
    "langchain-community>=0.4.1",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.17",
    "rapidfuzz>=3.0.0",  # fuzzy matching for verification
    "fakeredis>=1.9.0",  # for Redis testing in CI
    "requests>=2.31.0",
    "redis>=4.5.0",
    "spacy>=3.5.0",
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.19.0"
